# pytelos

./: .env.example  .gitignore  Dockerfile.postgres  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
src/pytelos/: __init__.py
src/pytelos/agent/: __init__.py  data_structures.py  document_agent.py  tools.py
src/pytelos/cli/: __init__.py  app.py  providers.py
src/pytelos/embedding/: __init__.py  base.py  factory.py  models.py
src/pytelos/embedding/providers/: __init__.py  openai.py
src/pytelos/indexer/: __init__.py  base.py  factory.py  models.py  pipeline.py
src/pytelos/indexer/parsers/: __init__.py  base.py  markdown.py  pdf.py  python.py  terraform_parser.py  yaml_parser.py
src/pytelos/llm/: __init__.py  base.py  factory.py  models.py
src/pytelos/llm/providers/: __init__.py  anthropic.py  deepseek.py  gemini.py  openai.py
src/pytelos/memory/: __init__.py  base.py  factory.py  in_memory.py  models.py  sqlite.py
src/pytelos/prompts/: __init__.py  system.txt
src/pytelos/reasoning_agent/: __init__.py  connection_pool.py  data_structures.py  flows.py  pyergon_reasoning_agent.py  reasoning_agent.py  tools.py
src/pytelos/search/: __init__.py  base.py  engine.py  factory.py  models.py
src/pytelos/storage/: __init__.py  base.py  factory.py  models.py
src/pytelos/storage/postgres/: __init__.py  backend.py  schema.py
src/pytelos/ui/: __init__.py  app.py  callbacks.py  config.py  formatting.py  images.py  input_handler.py  models.py  screens.py  styles.py  themes.py  widgets.py
src/pytelos/workflows/: __init__.py  indexing.py  pyergon_indexing.py
tests/: conftest.py  test_embedding.py  test_indexer.py  test_search.py
