[project]
name = "pytelos"
version = "0.1.0"
description = "Modular codebase indexer with semantic search and RAG capabilities"
authors = [{ name = "Richard Chukwu", email = "richinex@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
]
keywords = [
    "code-indexer",
    "vector-search",
    "bm25",
    "semantic-search",
    "llm",
    "rag",
]

dependencies = [
    # Core async and validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.2",
    "numpy>=2.2.3",
    "uuid7>=0.1.0",
    # Database
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.2.6",
    "pgvector>=0.3.7",
    # LLM and Embeddings
    "openai>=1.99.9",
    "anthropic>=0.52.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    # Code parsing and analysis
    "tree-sitter>=0.23.3",
    "tree-sitter-python>=0.23.7",
    # Document parsing
    "pypdf>=5.1.0",
    "markdown-it-py>=4.0.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.0",
    "python-hcl2>=4.3.0",
    "mistune>=3.0.0",
    # Workflow orchestration
    "pyergon>=0.1.0",
    # Conversation memory
    "aiosqlite>=0.20.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "textual>=3.0.0",
    "tenacity>=9.0.0",
    "typer>=0.21.1",
    "pandas>=2.3.3",
    "textual-image[textual]>=0.8.5",
    "matplotlib>=3.10.8",
    "rich-pixels>=3.0.1",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.148.8",
    "mutmut>=3.3.0",
    "ruff>=0.14.6",
    "mypy>=1.19.0",
    "ipython>=8.31.0",
]

[project.scripts]
pytelos = "pytelos.cli.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/pytelos",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--timeout=30",
]
markers = [
    "asyncio: async tests",
    "integration: integration tests",
    "slow: slow running tests",
    "unit: unit tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "TCH",
]
ignore = [
    "E501",
    "B008",   # Allow function calls in default arguments (common typer pattern)
    "B904",   # Allow raise without from in except clauses
    "SIM105", # Allow try-except-pass instead of contextlib.suppress
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mutmut]
paths_to_mutate = "src/pytelos"
backup = false
runner = "pytest -x -v"
tests_dir = "tests"

[tool.uv]
# Override pyergon's pinned numpy==2.4.0 (yanked) with latest stable
override-dependencies = [
    "numpy>=2.4.1",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.150.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.11",
]
